{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 69,
  "lineage": "c95ca732-c14e-b60c-a039-c988f1c503b4",
  "resources": [
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086c9552e0a61553e",
            "arn": "arn:aws:ec2:us-east-1:061051260015:elastic-ip/eipalloc-086c9552e0a61553e",
            "domain": "vpc",
            "id": "eipalloc-086c9552e0a61553e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-202-29-199.compute-1.amazonaws.com",
            "public_ip": "52.202.29.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "nat",
              "Project": "eks-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nat",
              "Project": "eks-demo"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-086c9552e0a61553e",
            "association_id": "eipassoc-0174226f10a87b06c",
            "connectivity_type": "public",
            "id": "nat-03e6a7053bd156dfd",
            "network_interface_id": "eni-0931e409effb0c841",
            "private_ip": "10.0.69.69",
            "public_ip": "52.202.29.199",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0850eafe675e8b86f",
            "tags": {
              "Environment": "dev",
              "Name": "nat",
              "Project": "eks-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nat",
              "Project": "eks-demo"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051260015:route-table/rtb-0abd18756502f5da1",
            "id": "rtb-0abd18756502f5da1",
            "owner_id": "061051260015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03e6a7053bd156dfd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "private",
              "Project": "eks-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private",
              "Project": "eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-036ed5cdf4fd3ac3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051260015:route-table/rtb-02fb09f6fba36c532",
            "id": "rtb-02fb09f6fba36c532",
            "owner_id": "061051260015",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06019ae0bac51d711",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "public",
              "Project": "eks-demo"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public",
              "Project": "eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-036ed5cdf4fd3ac3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004034de9da588f65",
            "route_table_id": "rtb-0abd18756502f5da1",
            "subnet_id": "subnet-0612413a908abf99d"
          },
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.nat",
            "module.routable.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0545c66c72d737eab",
            "route_table_id": "rtb-0abd18756502f5da1",
            "subnet_id": "subnet-0d03ff19f98059bee"
          },
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.nat",
            "module.routable.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fd0bee687d63b02",
            "route_table_id": "rtb-02fb09f6fba36c532",
            "subnet_id": "subnet-0850eafe675e8b86f"
          },
          "dependencies": [
            "module.routable.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fabe65a5d949dfdb",
            "route_table_id": "rtb-02fb09f6fba36c532",
            "subnet_id": "subnet-0cdfb426432ac0ba4"
          },
          "dependencies": [
            "module.routable.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051260015:subnet/subnet-0612413a908abf99d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0612413a908abf99d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061051260015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-us-east-1a",
              "Project": "eks-demo",
              "kubernetes.io/cluster/Mcluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-us-east-1a",
              "Project": "eks-demo",
              "kubernetes.io/cluster/Mcluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-036ed5cdf4fd3ac3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051260015:subnet/subnet-0d03ff19f98059bee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d03ff19f98059bee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061051260015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-us-east-1b",
              "Project": "eks-demo",
              "kubernetes.io/cluster/Mcluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-us-east-1b",
              "Project": "eks-demo",
              "kubernetes.io/cluster/Mcluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-036ed5cdf4fd3ac3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051260015:subnet/subnet-0850eafe675e8b86f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0850eafe675e8b86f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061051260015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-us-east-1a",
              "Project": "eks-demo",
              "kubernetes.io/cluster/Mcluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-us-east-1a",
              "Project": "eks-demo",
              "kubernetes.io/cluster/Mcluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-036ed5cdf4fd3ac3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051260015:subnet/subnet-0cdfb426432ac0ba4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdfb426432ac0ba4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061051260015",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-us-east-1b",
              "Project": "eks-demo",
              "kubernetes.io/cluster/Mcluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-us-east-1b",
              "Project": "eks-demo",
              "kubernetes.io/cluster/Mcluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-036ed5cdf4fd3ac3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051260015:internet-gateway/igw-06019ae0bac51d711",
            "id": "igw-06019ae0bac51d711",
            "owner_id": "061051260015",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-036ed5cdf4fd3ac3c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051260015:vpc/vpc-036ed5cdf4fd3ac3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e65d9496b852cfd8",
            "default_route_table_id": "rtb-0087a99680029cc26",
            "default_security_group_id": "sg-022f8e321c79db53e",
            "dhcp_options_id": "dopt-0a78d21eb6ee14954",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036ed5cdf4fd3ac3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0087a99680029cc26",
            "owner_id": "061051260015",
            "tags": {
              "Name": "mASa-vPn"
            },
            "tags_all": {
              "Name": "mASa-vPn"
            }
          }
        }
      ]
    }
  ]
}